--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-leaflet": "^4.2.1",
+    "react-modal": "^3.16.3",
     "react-quilljs": "^1.3.3",
     "react-resizable-panels": "^0.0.55",
     "react-select": "^5.8.0",
